--- a/index.ipynb
+++ b/index.ipynb
@@ -1556,7 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Performing analysis on _complete df_**"
+    "> **Performing analysis on _complete df_**"
    ]
   },
   {
@@ -1564,7 +1564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Check the number of unique books in the dataframe"
+    "**1. Check the number of unique books in the dataframe**"
    ]
   },
   {
@@ -1595,7 +1595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Checking the years the books were published"
+    "**2. Checking the years the books were published**"
    ]
   },
   {
@@ -1629,7 +1629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Checking the number of authors in the dataframe"
+    "**3. Checking the number of authors in the dataframe**"
    ]
   },
   {
@@ -2693,13 +2693,6 @@
     "# Observation:\n",
     "    # All the datatypes are correct"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
