Minor changes made

--- a/index.ipynb
+++ b/index.ipynb
@@ -863,7 +863,7 @@
     "ax = sns.lineplot(x='years', y='numbers', data=year_plot, color='teal')\n",
     "\n",
     "ax.set(xlabel='Years', ylabel='Number of books', \n",
-    "       title='Years v. Number of books made')\n",
+    "       title='Years vs. Number of books made')\n",
     "plt.show()\n",
     "# Observations:\n",
     "    # Most books in the dataset were published from 1950 to 202"
@@ -2025,7 +2025,7 @@
     "            palette='viridis',\n",
     "            ax=ax\n",
     "            )\n",
-    "ax.set_title(\"Top 10 books\");\n",
+    "ax.set_title(\"Top 10 Publishers\");\n",
     "\n",
     "# Observations:\n",
     "    # The most popular publisher has sold about 35000 copies"
