Minor changes made

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='Images\\book3.png' alt=\"My Image\" width=\"700\" height=\"300\"> "
+    "<img src=\"Images\\book3.png\" alt=\"My Image\" width=\"700\" height=\"300\"> "
    ]
   },
   {
